--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   manage_calendar_events: ^1.0.7
   provider: ^5.0.0
   google_fonts: ^2.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
