--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^5.0.0
   google_fonts: ^2.1.0
   intl: ^0.17.0
+  google_sign_in: ^5.1.0
 
 dev_dependencies:
   flutter_test:
